@@ -1,3 +1,6 @@
+2008-03-26  Massimiliano Mantione  <massi@ximian.com>
+	* configure.in: Added PLATFORM_LINUX automake conditional.
+
 2008-03-25  Zoltan Varga  <vargaz@gmail.com>
 
 	* runtime/Makefile.am (mcs-compileall): Skip net 2.1 assemblies for now.
